// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddDialog /> should match snapshot 1`] = `
<div>
  <form
    id="add-reference"
    onSubmit={[Function]}
  >
    <IdentifierInput
      fieldRef={[Function]}
      identifierList={""}
      onChange={[Function]}
    />
  </form>
  <ButtonRow
    addManually={false}
    attachInline={true}
    isLoading={false}
    onAttachInlineToggle={[Function]}
    onSearchPubmedClick={[Function]}
    onToggleManual={[Function]}
  />
  <style
    jsx={true}
  >
    
                    div {
                        position: relative;
                    }
                
  </style>
</div>
`;

exports[`<AddDialog /> should match snapshot 2`] = `
<div>
  <form
    id="add-reference"
    onSubmit={[Function]}
  >
    <ManualEntryContainer
      errorMessage={""}
      manualData={
        Object {
          "type": "webpage",
        }
      }
      onAutoCite={[Function]}
      onTypeChange={[Function]}
      people={
        Array [
          Object {
            "family": "",
            "given": "",
            "type": "author",
          },
        ]
      }
    />
  </form>
  <ButtonRow
    addManually={true}
    attachInline={true}
    isLoading={false}
    onAttachInlineToggle={[Function]}
    onSearchPubmedClick={[Function]}
    onToggleManual={[Function]}
  />
  <style
    jsx={true}
  >
    
                    div {
                        position: relative;
                    }
                
  </style>
</div>
`;

exports[`<AddDialog /> should open pubmed dialog 1`] = `
<div>
  <form
    id="add-reference"
    onSubmit={[Function]}
  >
    <IdentifierInput
      fieldRef={[Function]}
      identifierList={""}
      onChange={[Function]}
    />
  </form>
  <ButtonRow
    addManually={false}
    attachInline={true}
    isLoading={false}
    onAttachInlineToggle={[Function]}
    onSearchPubmedClick={[Function]}
    onToggleManual={[Function]}
  />
  <style
    jsx={true}
  >
    
                    div {
                        position: relative;
                    }
                
  </style>
</div>
`;

exports[`<AddDialog /> should open pubmed dialog 2`] = `
<div>
  <Container
    currentDialog={"PUBMED"}
    onClose={[Function]}
    overlayOpacity={0.2}
    title="Search PubMed"
    width={600}
  >
    <PubmedDialog
      onSubmit={[Function]}
    />
  </Container>
  <form
    id="add-reference"
    onSubmit={[Function]}
  >
    <IdentifierInput
      fieldRef={[Function]}
      identifierList={""}
      onChange={[Function]}
    />
  </form>
  <ButtonRow
    addManually={false}
    attachInline={true}
    isLoading={false}
    onAttachInlineToggle={[Function]}
    onSearchPubmedClick={[Function]}
    onToggleManual={[Function]}
  />
  <style
    jsx={true}
  >
    
                    div {
                        position: relative;
                    }
                
  </style>
</div>
`;

exports[`<AddDialog /> should open pubmed dialog 3`] = `
<div>
  <Container
    currentDialog={"PUBMED"}
    onClose={[Function]}
    overlayOpacity={0.2}
    title="Search PubMed"
    width={600}
  >
    <PubmedDialog
      onSubmit={[Function]}
    />
  </Container>
  <form
    id="add-reference"
    onSubmit={[Function]}
  >
    <IdentifierInput
      fieldRef={[Function]}
      identifierList={""}
      onChange={[Function]}
    />
  </form>
  <ButtonRow
    addManually={false}
    attachInline={true}
    isLoading={false}
    onAttachInlineToggle={[Function]}
    onSearchPubmedClick={[Function]}
    onToggleManual={[Function]}
  />
  <style
    jsx={true}
  >
    
                    div {
                        position: relative;
                    }
                
  </style>
</div>
`;
